# Farm-Tracking-System

./: .mxproject  CMakeLists.txt  IQYazilim-SubGHz.code-workspace  LICENSE  README.md  SubGHz_Phy_PingPong.ioc  VSCODE_QUICKSTART.md  VSCODE_TASKS.md  build.ninja  cmake_install.cmake  compile_commands.json  config.json  config_manager.py  config_manager_broken.py  config_manager_old.py  readme.txt  seneryo.txt  temp_config.py  test_config.py
Core/Inc/: lis2de12.h  main.h  project_config.h  project_config_test.h  stm32wlxx_it.h  sys_conf.h  usart.h  utilities_def.h
Core/Src/: EMPA_MqttAws.c  EMPA_MqttAws.h  EMPA_MqttAws_backup.c  common.c  dma.c  gpio.c  i2c.c  main.c  myESP32AT.c  stm32wlxx_it.c  sys_app.c  tim.c  usart.c  usart_if.c
Drivers/BSP/STM32WLxx_Nucleo/: stm32wlxx_nucleo_radio.c  stm32wlxx_nucleo_radio.h
STM32CubeIDE/: .cproject  .project  STM32WL55JCIX_FLASH.ld  SubGHz_Phy_PingPong Debug.launch
STM32CubeIDE/Application/User/Core/: EMPA_MqttAws.c  common.c  common.h  lis2de12.c  myESP32AT.c  myESP32AT.h  ota_manager.c  ota_manager.h  sensirion_i2c_hal.c
STM32CubeIDE/Debug/: SubGHz_Phy_PingPong.elf  SubGHz_Phy_PingPong.hex  SubGHz_Phy_PingPong.list  SubGHz_Phy_PingPong.map  firmware_metadata.json  makefile  objects.list  sources.mk
STM32CubeIDE/Debug/Application/User/Core/: EMPA_MqttAws.cyclo  EMPA_MqttAws.d  EMPA_MqttAws.su  common.cyclo  common.d  common.su  dma.cyclo  dma.d  dma.su  gpio.cyclo  gpio.d  gpio.su  i2c.cyclo  i2c.d  i2c.su  lis2de12.cyclo  lis2de12.d  lis2de12.su  main.cyclo  main.d  main.su  myESP32AT.cyclo  myESP32AT.d  myESP32AT.su  ota_manager.cyclo  ota_manager.d  ota_manager.su  rtc.cyclo  rtc.d  rtc.su  sensirion_common.cyclo  sensirion_common.d  sensirion_common.su  sensirion_i2c.cyclo  sensirion_i2c.d  sensirion_i2c.su  sensirion_i2c_hal.cyclo  sensirion_i2c_hal.d  sensirion_i2c_hal.su  sht4x_i2c.cyclo  (+33 more)
STM32CubeIDE/Debug/Application/User/SubGHz_Phy/App/: app_subghz_phy.cyclo  app_subghz_phy.d  app_subghz_phy.su  subdir.mk  subghz_phy_app.cyclo  subghz_phy_app.d  subghz_phy_app.su
STM32CubeIDE/Debug/Drivers/BSP/STM32WLxx_Nucleo/: stm32wlxx_nucleo.cyclo  stm32wlxx_nucleo.d  stm32wlxx_nucleo.su  stm32wlxx_nucleo_radio.cyclo  stm32wlxx_nucleo_radio.d  stm32wlxx_nucleo_radio.su  subdir.mk
STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32wlxx.cyclo  system_stm32wlxx.d  system_stm32wlxx.su
STM32CubeIDE/Debug/Drivers/STM32WLxx_HAL_Driver/: stm32wlxx_hal.cyclo  stm32wlxx_hal.d  stm32wlxx_hal.su  stm32wlxx_hal_cortex.cyclo  stm32wlxx_hal_cortex.d  stm32wlxx_hal_cortex.su  stm32wlxx_hal_dma.cyclo  stm32wlxx_hal_dma.d  stm32wlxx_hal_dma.su  stm32wlxx_hal_dma_ex.cyclo  stm32wlxx_hal_dma_ex.d  stm32wlxx_hal_dma_ex.su  stm32wlxx_hal_exti.cyclo  stm32wlxx_hal_exti.d  stm32wlxx_hal_exti.su  stm32wlxx_hal_flash.cyclo  stm32wlxx_hal_flash.d  stm32wlxx_hal_flash.su  stm32wlxx_hal_flash_ex.cyclo  stm32wlxx_hal_flash_ex.d  stm32wlxx_hal_flash_ex.su  stm32wlxx_hal_gpio.cyclo  stm32wlxx_hal_gpio.d  stm32wlxx_hal_gpio.su  stm32wlxx_hal_i2c.cyclo  stm32wlxx_hal_i2c.d  stm32wlxx_hal_i2c.su  stm32wlxx_hal_i2c_ex.cyclo  stm32wlxx_hal_i2c_ex.d  stm32wlxx_hal_i2c_ex.su  stm32wlxx_hal_pwr.cyclo  stm32wlxx_hal_pwr.d  stm32wlxx_hal_pwr.su  stm32wlxx_hal_pwr_ex.cyclo  stm32wlxx_hal_pwr_ex.d  stm32wlxx_hal_pwr_ex.su  stm32wlxx_hal_rcc.cyclo  stm32wlxx_hal_rcc.d  stm32wlxx_hal_rcc.su  stm32wlxx_hal_rcc_ex.cyclo  (+24 more)
STM32CubeIDE/Debug/Middlewares/SubGHz_Phy/: lr_fhss_mac.cyclo  lr_fhss_mac.d  lr_fhss_mac.su  radio.cyclo  radio.d  radio.su  radio_driver.cyclo  radio_driver.d  radio_driver.su  radio_fw.cyclo  radio_fw.d  radio_fw.su  subdir.mk  wl_lr_fhss.cyclo  wl_lr_fhss.d  wl_lr_fhss.su
STM32CubeIDE/Debug/Utilities/: stm32_adv_trace.cyclo  stm32_adv_trace.d  stm32_adv_trace.su  stm32_lpm.cyclo  stm32_lpm.d  stm32_lpm.su  stm32_mem.cyclo  stm32_mem.d  stm32_mem.su  stm32_seq.cyclo  stm32_seq.d  stm32_seq.su  stm32_systime.cyclo  stm32_systime.d  stm32_systime.su  stm32_timer.cyclo  stm32_timer.d  stm32_timer.su  stm32_tiny_sscanf.cyclo  stm32_tiny_sscanf.d  stm32_tiny_sscanf.su  stm32_tiny_vsnprintf.cyclo  stm32_tiny_vsnprintf.d  stm32_tiny_vsnprintf.su  subdir.mk
SubGHz_Phy/App/: app_version.h  github_ota_downloader.c  github_ota_downloader.h  lora_ota_gateway.c  lora_ota_gateway.h  lora_ota_node.c  lora_ota_node.h  lora_ota_protocol.h  ota_integration_app.c  ota_integration_app.h  ota_node_integration_app.c  ota_node_integration_app.h  subghz_phy_app.c  subghz_phy_app.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
firmware/: README.md
